Add metrics to the clothes model

--- a/ClothesModel/TrainandTest.ipynb
+++ b/ClothesModel/TrainandTest.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,8 @@
     "    test_Path,  # Use your test data directory here\n",
     "    target_size=IMAGE_SIZE,\n",
     "    batch_size=32,\n",
-    "    class_mode='categorical'\n",
+    "    class_mode='categorical',\n",
+    "    shuffle = False\n",
     ")"
    ]
   },
@@ -350,9 +351,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:120: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m23/23\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 386ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       Dress       0.90      1.00      0.95        54\n",
+      "      Jacket       0.99      0.90      0.94       129\n",
+      "       Pants       0.93      0.94      0.94        69\n",
+      "       Shoes       0.98      0.98      0.98       120\n",
+      "       Short       0.97      0.92      0.94        72\n",
+      "        Suit       0.82      1.00      0.90        23\n",
+      "  Sunglasses       0.96      0.99      0.97        73\n",
+      "     T_shirt       0.93      0.94      0.93        96\n",
+      "       Watch       0.99      1.00      0.99        84\n",
+      "\n",
+      "    accuracy                           0.96       720\n",
+      "   macro avg       0.94      0.96      0.95       720\n",
+      "weighted avg       0.96      0.96      0.96       720\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "test_labels = test_set.classes\n",
     "\n",
@@ -367,13 +400,6 @@
     "report = classification_report(test_labels, predicted_classes, target_names=class_labels)\n",
     "print(report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
