Delete junk files and update metics computation

--- a/CategoryModel/TrainCategoryModel.ipynb
+++ b/CategoryModel/TrainCategoryModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,8 @@
     "import os\n",
     "import uuid\n",
     "import shutil\n",
-    "import glob"
+    "import glob\n",
+    "from sklearn.metrics import classification_report, accuracy_score"
    ]
   },
   {
@@ -179,116 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 382,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # define the directory containing training images\n",
-    "# target_size = (224, 224)\n",
-    "\n",
-    "# # initialize lists to store images and labels\n",
-    "# images = []\n",
-    "# labels = []\n",
-    "\n",
-    "# for filename in os.listdir(\"Test/It\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/It\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(0)\n",
-    "# for filename in os.listdir(\"Test/Clothes\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/Clothes\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(1)\n",
-    "# for filename in os.listdir(\"Test/Cars\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/Cars\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(2)\n",
-    "# for filename in os.listdir(\"Test/Furniture\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/Furniture\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(3)\n",
-    "# for filename in os.listdir(\"Test/Jewellery\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/Jewellery\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(4)\n",
-    "# for filename in os.listdir(\"Test/Animals\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/Animals\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(5)\n",
-    "# for filename in os.listdir(\"Test/Other\"):\n",
-    "#     if filename.endswith('.jpg') or filename.endswith('.png') or filename.endswith('.jpeg'):\n",
-    "#          # Load the image\n",
-    "#         img = load_img(os.path.join(\"Test/Other\", filename), target_size=(224,224))  # Adjust if needed\n",
-    "\n",
-    "#         # Convert to array and normalize\n",
-    "#         img_array = img_to_array(img)\n",
-    "#         img_array = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "#         img_array = img_array / 255.0  # Normalize pixel values (assuming rescale used during training)\n",
-    "        \n",
-    "#        # add the preprocessed image to the list of images\n",
-    "#         images.append(img_array)\n",
-    "#         labels.append(6)\n",
-    "# # convert lists to numpy arrays\n",
-    "# X_train = np.array(images)\n",
-    "# Y_train = np.array(labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +194,7 @@
        " 'Train\\\\Jewellery']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 386,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +264,8 @@
     "    test_Path,  # Use your test data directory here\n",
     "    target_size=IMAGE_SIZE,\n",
     "    batch_size=32,\n",
-    "    class_mode='categorical'\n",
+    "    class_mode='categorical',\n",
+    "    shuffle= False\n",
     ")"
    ]
   },
@@ -439,15 +332,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = tf.ke"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 181,
    "metadata": {},
    "outputs": [
@@ -474,35 +358,6 @@
     "all_test_labels = []\n",
     "for _, labels in test_set:\n",
     "  all_test_labels.extend(labels.tolist())  # Convert labels in each batch to list\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(all_test_labels)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tensorflow.keras.preprocessing.image import load_img, img_to_array\n",
-    "\n",
-    "# Define path to your image\n",
-    "image_path = \"jaguar.jpg\"\n",
-    "\n",
-    "# Load the image\n",
-    "img = load_img(image_path, target_size=IMAGE_SIZE)  # Adjust if needed\n",
-    "\n",
-    "# Convert to array and normalize\n",
-    "x = img_to_array(img)\n",
-    "x = np.expand_dims(x, axis=0)  # Add a batch dimension as the model expects batches\n",
-    "x = x / 255.0  # Normalize pixel values (assuming rescale used during training)\n"
    ]
   },
   {
@@ -545,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -559,6 +414,47 @@
    ],
    "source": [
     "model = tf.keras.models.load_model(\"CategoryModelV2.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m55/55\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 427ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "     Animals       0.98      1.00      0.99       632\n",
+      "        Cars       0.99      1.00      1.00       392\n",
+      "     Clothes       0.98      0.90      0.94       207\n",
+      "   Furniture       0.78      1.00      0.88        65\n",
+      "          IT       0.97      0.93      0.95       360\n",
+      "   Jewellery       1.00      1.00      1.00        95\n",
+      "\n",
+      "    accuracy                           0.97      1751\n",
+      "   macro avg       0.95      0.97      0.96      1751\n",
+      "weighted avg       0.98      0.97      0.97      1751\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_labels = test_set.classes\n",
+    "\n",
+    "# Predict the labels for the test set\n",
+    "predictions = model.predict(test_set, steps=len(test_set))\n",
+    "predicted_classes = np.argmax(predictions, axis=1)\n",
+    "\n",
+    "# Get the class indices to labels mapping\n",
+    "class_labels = list(test_set.class_indices.keys())\n",
+    "\n",
+    "# Print classification report\n",
+    "report = classification_report(test_labels, predicted_classes, target_names=class_labels)\n",
+    "print(report)"
    ]
   },
   {
