--- a/FurnitureModel/TrainAndTest.ipynb
+++ b/FurnitureModel/TrainAndTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,14 +16,24 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator , load_img , img_to_array\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "from tensorflow.keras.losses import CategoricalCrossentropy"
+    "from tensorflow.keras.losses import CategoricalCrossentropy\n",
+    "from sklearn.metrics import classification_report, accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\backend\\common\\global_state.py:73: The name tf.reset_default_graph is deprecated. Please use tf.compat.v1.reset_default_graph instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "tf.keras.backend.clear_session()"
    ]
@@ -136,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +159,7 @@
        " 'Train\\\\Table']"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +229,8 @@
     "    test_Path,  # Use your test data directory here\n",
     "    target_size=IMAGE_SIZE,\n",
     "    batch_size=32,\n",
-    "    class_mode='categorical'\n",
+    "    class_mode='categorical',\n",
+    "    shuffle = False\n",
     ")"
    ]
   },
@@ -285,152 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m14/14\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 366ms/step\n"
-     ]
-    }
-   ],
-   "source": [
-    "pred_test = model.predict(test_set, steps=len(test_set))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = np.argmax(pred_test,axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 210,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "423"
-      ]
-     },
-     "execution_count": 210,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(predictions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([4, 0, 3, 2, 2, 0, 1, 0, 0, 1, 2, 1, 3, 3, 0, 1, 0, 1, 1, 0, 3, 1,\n",
-       "       1, 1, 1, 2, 1, 1, 0, 3, 1, 1, 3, 1, 2, 2, 2, 3, 2, 3, 2, 0, 1, 1,\n",
-       "       2, 3, 1, 3, 0, 0, 1, 1, 2, 0, 3, 1, 0, 0, 2, 1, 0, 2, 3, 1, 1, 2,\n",
-       "       0, 3, 3, 1, 3, 0, 1, 0, 3, 1, 2, 2, 2, 1, 2, 2, 0, 1, 1, 0, 0, 0,\n",
-       "       0, 1, 1, 0, 2, 0, 1, 0, 1, 0, 4, 1, 1, 0, 0, 2, 0, 3, 0, 1, 3, 0,\n",
-       "       3, 0, 2, 3, 3, 2, 4, 0, 2, 3, 3, 2, 1, 3, 3, 0, 4, 0, 3, 0, 0, 0,\n",
-       "       0, 2, 4, 1, 2, 3, 1, 2, 0, 0, 0, 1, 0, 2, 0, 3, 0, 1, 2, 3, 3, 1,\n",
-       "       1, 2, 3, 0, 3, 2, 1, 0, 4, 3, 1, 1, 0, 0, 4, 0, 3, 3, 1, 2, 2, 2,\n",
-       "       2, 4, 3, 1, 2, 1, 3, 3, 3, 1, 0, 2, 2, 1, 1, 1, 2, 3, 2, 1, 0, 2,\n",
-       "       2, 2, 0, 3, 3, 0, 0, 1, 3, 2, 2, 1, 1, 1, 1, 2, 2, 1, 0, 2, 2, 3,\n",
-       "       0, 3, 2, 0, 2, 3, 3, 1, 3, 1, 0, 1, 4, 0, 2, 4, 0, 3, 4, 1, 4, 1,\n",
-       "       1, 0, 1, 3, 1, 0, 2, 0, 0, 2, 3, 0, 3, 2, 2, 0, 2, 3, 1, 2, 4, 1,\n",
-       "       1, 4, 2, 3, 1, 0, 2, 3, 2, 3, 3, 3, 3, 3, 0, 1, 3, 0, 3, 0, 2, 2,\n",
-       "       3, 1, 3, 2, 1, 1, 1, 4, 0, 1, 1, 2, 0, 2, 2, 1, 0, 3, 2, 4, 3, 4,\n",
-       "       4, 0, 0, 3, 4, 2, 3, 3, 2, 2, 0, 1, 2, 2, 2, 4, 2, 0, 1, 0, 3, 0,\n",
-       "       3, 0, 2, 0, 2, 0, 2, 0, 2, 1, 0, 3, 2, 0, 0, 2, 3, 3, 2, 3, 1, 1,\n",
-       "       3, 1, 0, 4, 3, 3, 2, 0, 3, 3, 2, 0, 4, 1, 2, 2, 1, 3, 0, 2, 3, 0,\n",
-       "       4, 3, 3, 2, 1, 3, 2, 3, 3, 2, 4, 2, 2, 1, 0, 2, 3, 2, 3, 3, 3, 1,\n",
-       "       0, 1, 1, 0, 4, 0, 2, 1, 0, 0, 1, 0, 2, 3, 0, 1, 3, 1, 2, 0, 0, 2,\n",
-       "       4, 4, 0, 0, 3], dtype=int64)"
-      ]
-     },
-     "execution_count": 211,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = np.empty(0)  # Initialize an empty array\n",
-    "for i in range(14):\n",
-    "    label = np.argmax(test_set[i][1], axis=1)  # Extract predictions\n",
-    "    labels = np.concatenate((labels, label))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0., 1., 3., 4., 2., 0., 2., 3., 0., 3., 2., 3., 1., 3., 3., 0., 0.,\n",
-       "       1., 1., 3., 1., 3., 2., 3., 1., 3., 2., 2., 2., 2., 0., 4., 1., 0.,\n",
-       "       3., 0., 2., 2., 3., 0., 2., 2., 1., 0., 3., 1., 1., 0., 0., 1., 4.,\n",
-       "       4., 3., 1., 1., 0., 1., 3., 4., 2., 0., 2., 1., 2., 3., 2., 1., 1.,\n",
-       "       3., 0., 4., 0., 0., 3., 2., 3., 0., 0., 1., 3., 0., 2., 1., 1., 1.,\n",
-       "       2., 2., 2., 4., 3., 3., 0., 3., 2., 0., 1., 0., 2., 0., 0., 3., 1.,\n",
-       "       2., 2., 0., 0., 1., 1., 1., 3., 0., 3., 0., 1., 2., 3., 2., 3., 3.,\n",
-       "       3., 2., 3., 3., 2., 0., 3., 3., 0., 0., 1., 3., 1., 4., 0., 2., 1.,\n",
-       "       3., 4., 0., 0., 0., 0., 1., 0., 0., 2., 3., 1., 0., 2., 0., 3., 3.,\n",
-       "       1., 2., 0., 1., 0., 0., 0., 3., 2., 2., 0., 1., 3., 3., 1., 3., 4.,\n",
-       "       3., 1., 0., 1., 3., 1., 4., 2., 3., 2., 3., 2., 2., 4., 3., 0., 3.,\n",
-       "       3., 3., 3., 2., 1., 2., 2., 0., 2., 2., 1., 4., 1., 1., 3., 2., 2.,\n",
-       "       3., 0., 2., 0., 2., 1., 0., 4., 3., 2., 2., 0., 0., 3., 2., 0., 2.,\n",
-       "       0., 0., 2., 3., 2., 2., 0., 3., 1., 1., 3., 2., 1., 1., 2., 0., 1.,\n",
-       "       1., 2., 3., 0., 1., 0., 0., 1., 1., 0., 3., 2., 3., 4., 2., 1., 3.,\n",
-       "       2., 3., 3., 0., 4., 2., 2., 1., 0., 1., 2., 2., 3., 1., 2., 0., 2.,\n",
-       "       2., 2., 0., 3., 2., 1., 1., 0., 2., 2., 3., 2., 1., 1., 1., 3., 0.,\n",
-       "       3., 0., 1., 1., 1., 1., 0., 2., 0., 0., 0., 1., 3., 2., 0., 2., 4.,\n",
-       "       3., 3., 0., 0., 2., 2., 0., 0., 0., 2., 3., 2., 2., 2., 2., 2., 1.,\n",
-       "       3., 1., 0., 1., 0., 3., 2., 0., 3., 1., 1., 3., 3., 0., 2., 2., 2.,\n",
-       "       4., 1., 2., 3., 3., 1., 0., 0., 0., 3., 1., 3., 1., 4., 2., 3., 3.,\n",
-       "       1., 3., 4., 3., 3., 1., 3., 4., 4., 0., 1., 1., 1., 3., 2., 1., 1.,\n",
-       "       1., 2., 3., 2., 3., 1., 1., 3., 2., 1., 1., 3., 0., 0., 2., 4., 0.,\n",
-       "       0., 1., 1., 0., 2., 1., 1., 2., 1., 1., 3., 3., 1., 1., 1., 3., 3.,\n",
-       "       0., 1., 1., 3., 2., 0., 3., 2., 0., 0., 0., 2., 1., 0., 0.])"
-      ]
-     },
-     "execution_count": 213,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "labels"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define path to your image\n",
+    "# Exemple of an image\n",
     "image_path = \"swivelchair (20).jpg\"\n",
     "\n",
     "# Load the image\n",
@@ -473,12 +343,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\saving\\saving_lib.py:396: UserWarning: Skipping variable loading for optimizer 'adam', because it has 326 variables whereas the saved optimizer has 14 variables. \n",
+      "  trackable.load_own_variables(weights_store.get(inner_path))\n"
+     ]
+    }
+   ],
+   "source": [
+    "# model.save(\"FurnitureModel.keras\")\n",
+    "model = tf.keras.models.load_model(\"FurnitureModel.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:120: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m14/14\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 499ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         Bed       0.94      0.99      0.97       100\n",
+      "       Chair       0.96      0.94      0.95       100\n",
+      "        Sofa       0.98      0.97      0.97       100\n",
+      " SwivelChair       1.00      0.94      0.97       100\n",
+      "       Table       0.85      1.00      0.92        23\n",
+      "\n",
+      "    accuracy                           0.96       423\n",
+      "   macro avg       0.95      0.97      0.96       423\n",
+      "weighted avg       0.96      0.96      0.96       423\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_labels = test_set.classes\n",
+    "\n",
+    "# Predict the labels for the test set\n",
+    "predictions = model.predict(test_set, steps=len(test_set))\n",
+    "predicted_classes = np.argmax(predictions, axis=1)\n",
+    "\n",
+    "# Get the class indices to labels mapping\n",
+    "class_labels = list(test_set.class_indices.keys())\n",
+    "\n",
+    "# Print classification report\n",
+    "report = classification_report(test_labels, predicted_classes, target_names=class_labels)\n",
+    "print(report)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# model.save(\"FurnitureModel.keras\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
