--- a/ItModel/TrainAndTest.ipynb
+++ b/ItModel/TrainAndTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,9 @@
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator,load_img\n",
     "from tensorflow.keras.utils import img_to_array\n",
     "import os\n",
-    "from random import shuffle\n"
+    "import glob\n",
+    "from random import shuffle\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n"
    ]
   },
   {
@@ -510,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +525,102 @@
     }
    ],
    "source": [
-    "# model = tf.keras.models.load_model(\"ItModelV1.keras\")"
+    "model = tf.keras.models.load_model(\"ItModelV1.keras\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Train\\\\Laptop', 'Train\\\\Printer', 'Train\\\\Smartphone', 'Train\\\\Tv']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_Path = \"Train\"\n",
+    "IMAGE_SIZE = (224,224)\n",
+    "folders = glob.glob(train_Path + '/*')\n",
+    "folders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 505 images belonging to 4 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_datagen = ImageDataGenerator(rescale=1./225)\n",
+    "test_Path = \"Test\"\n",
+    "test_set = test_datagen.flow_from_directory(\n",
+    "    test_Path,  # Use your test data directory here\n",
+    "    target_size=IMAGE_SIZE,\n",
+    "    batch_size=32,\n",
+    "    class_mode='categorical',\n",
+    "    shuffle = False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ghass\\anaconda3\\envs\\yolo\\Lib\\site-packages\\keras\\src\\trainers\\data_adapters\\py_dataset_adapter.py:120: UserWarning: Your `PyDataset` class should call `super().__init__(**kwargs)` in its constructor. `**kwargs` can include `workers`, `use_multiprocessing`, `max_queue_size`. Do not pass these arguments to `fit()`, as they will be ignored.\n",
+      "  self._warn_if_super_not_called()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m16/16\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 587ms/step\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Laptop       0.83      0.93      0.88        42\n",
+      "     Printer       0.99      0.97      0.98       146\n",
+      "  Smartphone       0.97      0.98      0.98       192\n",
+      "          Tv       0.97      0.95      0.96       125\n",
+      "\n",
+      "    accuracy                           0.96       505\n",
+      "   macro avg       0.94      0.96      0.95       505\n",
+      "weighted avg       0.97      0.96      0.96       505\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_labels = test_set.classes\n",
+    "\n",
+    "# Predict the labels for the test set\n",
+    "predictions = model.predict(test_set, steps=len(test_set))\n",
+    "predicted_classes = np.argmax(predictions, axis=1)\n",
+    "\n",
+    "# Get the class indices to labels mapping\n",
+    "class_labels = list(test_set.class_indices.keys())\n",
+    "\n",
+    "# Print classification report\n",
+    "report = classification_report(test_labels, predicted_classes, target_names=class_labels)\n",
+    "print(report)"
    ]
   },
   {
