--- a/JewelleryModel/TrainAndTest.ipynb
+++ b/JewelleryModel/TrainAndTest.ipynb
@@ -12,7 +12,9 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator , load_img\n",
     "from tensorflow.keras.utils import img_to_array\n",
-    "import os\n"
+    "import os\n",
+    "import glob\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n"
    ]
   },
   {
@@ -554,22 +556,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"JewelleryModelV1.keras\")"
+    "# model.save(\"JewelleryModelV1.keras\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
