Add Cars Price Prediction Model and its endpoint
The model isn't good enough with r2_score = 0.28

--- a/ClothesPrice/Clothes-price-prediction.ipynb
+++ b/ClothesPrice/Clothes-price-prediction.ipynb
@@ -199,32 +199,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "marka         5\n",
-       "naw3          7\n",
-       "9at3a         5\n",
-       "khochn      170\n",
-       "toul        256\n",
-       "3ordh       125\n",
-       "R           139\n",
-       "G            30\n",
-       "B            40\n",
-       "soum      10978\n",
-       "dtype: int64"
+       "array(['Shoes', 'Shirt', 'Jacket', 'T_shirt', 'Pants'], dtype=object)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.nunique()"
+    "data[\"9at3a\"].unique()"
    ]
   },
   {
